<!-- 
This xml contains the layout for the BMI application.

Author: Blaine Parr
Date: April 3, 2015
 -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <!-- layout for the unitsTextButton and unitsButton -->
    <TableRow
        android:id="@+id/unitsRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/unitsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="5dp"
            android:text="@string/units"
            android:width="40dp" />

        <Button
            android:id="@+id/unitsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/switchUnits"
            android:width="40dp" />

    </TableRow>

    <!-- layout for the heightTextView and heightEditText -->
    <TableRow
        android:id="@+id/heightRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="5dp"
            android:text="@string/myHeight" />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/heightInMetres"
            android:inputType="numberDecimal"
            android:padding="5dp" >

        </EditText>
    </TableRow>

    <!-- layout for the weightTextView and weightEditText -->
    <TableRow
        android:id="@+id/weightRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="5dp"
            android:text="@string/myWeight" />

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/weightInKilograms"
            android:inputType="numberDecimal"
            android:padding="5dp" />

    </TableRow>

    <!-- layout for the calculateBMIButton -->
    <TableRow
        android:id="@+id/calculateRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/calculateBMIButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculateBMI" />
    </TableRow>

    <!-- layout for the bmiTextView and bmiEditText -->
    <TableRow
        android:id="@+id/bmiRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bmiTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="5dp"
            android:text="@string/bmi" />

        <EditText
            android:id="@+id/bmiEditText"
            android:labelFor="@+id/bmiEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="numberDecimal" >
        </EditText>

    </TableRow>

    <!-- layout for the bmiScaleTextView and resultTextView -->
    <TableRow
        android:id="@+id/scaleRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bmiScaleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#666666"
            android:padding="5dp"
            android:text="@string/bmiScale"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#666666"
            android:padding="5dp"
            android:text="@string/result"
            android:textColor="#FFFFFF" />

    </TableRow>

    <!-- layout for the underweightTextView and underweightResultTextView -->
    <TableRow
        android:id="@+id/scaleRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/underweightTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#999999"
            android:padding="5dp"
            android:text="@string/underweight" />

        <TextView
            android:id="@+id/underweightResultTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#999999"
            android:padding="5dp"
            android:text="@string/lessThan185" />

    </TableRow>

    <!-- layout for the normalTextView and normalResultTextView -->
    <TableRow
        android:id="@+id/scaleRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/normalTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#AAAAAA"
            android:padding="5dp"
            android:text="@string/normal" />

        <TextView
            android:id="@+id/normalResultTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#AAAAAA"
            android:padding="5dp"
            android:text="@string/between185And249" />

    </TableRow>

    <!-- layout for the overweightTextView and overweightResultTextView -->
    <TableRow
        android:id="@+id/scaleRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/overweightTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#999999"
            android:padding="5dp"
            android:text="@string/overweight" />

        <TextView
            android:id="@+id/overweightResultTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#999999"
            android:padding="5dp"
            android:text="@string/between25And299" />

    </TableRow>

    <!-- layout for the obeseTextView and obeseResultTextView -->
    <TableRow
        android:id="@+id/scaleRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/obeseTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#AAAAAA"
            android:padding="5dp"
            android:text="@string/obese" />

        <TextView
            android:id="@+id/obeseResultTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#AAAAAA"
            android:padding="5dp"
            android:text="@string/thirtyOrGreater" />

    </TableRow>

    <!-- layout for the resetButton -->
    <TableRow
        android:id="@+id/resetRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

    </TableRow>

</TableLayout>